package animation;

public interface Effet {

}
