@startuml
title Diagramme UML - Bandeau & Effets d'animation

package bandeau {
    class Bandeau {
        +getFont() : java.awt.Font
        +getBackground() : java.awt.Color
        +getForeground() : java.awt.Color
        +setMessage(msg : String) : void
        +setFont(font : java.awt.Font) : void
        +setRotation(angle : double) : void
        +setBackground(c : java.awt.Color) : void
        +setForeground(c : java.awt.Color) : void
        +sleep(ms : long) : void
        +close() : void
    }
}

package animation {
    interface Effet {
        +appliquer(b : Bandeau) : void
    }

    class Scenario {
        -etapes : List<EtapeScenario>
        +ajouterEffet(effet : Effet, repetitions : int) : void
        +jouer(b : Bandeau) : void
    }

    class EtapeScenario {
        -effet : Effet
        -repetitions : int
        +EtapeScenario(effet : Effet, repetitions : int)
        +getEffet() : Effet
        +getRepetitions() : int
    }
}

package "animation.effets" {
    class ZoomEffet {
        -message : String
        +ZoomEffet(message : String)
        +appliquer(b : Bandeau) : void
    }

    class RotationEffet {
        -message : String
        +RotationEffet(message : String)
        +appliquer(b : Bandeau) : void
    }

    class ClignotantEffet {
        -message : String
        -nbClignotements : int
        +ClignotantEffet(message : String, nbClignotements : int)
        +appliquer(b : Bandeau) : void
    }

    class TeletypeEffet {
        -message : String
        -delay : int
        +TeletypeEffet(message : String, delayMillis : int)
        +appliquer(b : Bandeau) : void
    }
}

package exemple {
    class ExempleScenario {
        +demo() : void
        +main(args : String[]) : void
    }
}

animation.Scenario "1" *-- "1..*" animation.EtapeScenario

animation.EtapeScenario o-- animation.Effet

animation.Effet <|.. animation.effets.ZoomEffet
animation.Effet <|.. animation.effets.RotationEffet
animation.Effet <|.. animation.effets.ClignotantEffet
animation.Effet <|.. animation.effets.TeletypeEffet

animation.Effet ..> bandeau.Bandeau : «use»

exemple.ExempleScenario ..> animation.Scenario
exemple.ExempleScenario ..> bandeau.Bandeau

@enduml
